# created on 2019/9/10
# author @zoloypzuo

add_library(Common
        d3dApp.cpp d3dApp.h
        d3dUtil.cpp d3dUtil.h
        d3dx12.h
        DDSTextureLoader.cpp DDSTextureLoader.h
        GameTimer.cpp GameTimer.h
        GeometryGenerator.cpp GeometryGenerator.h
        MathHelper.cpp MathHelper.h
        UploadBuffer.h
        )