# created on 2021/5/28
# author @zoloypzuo
add_library(ImGui
        Common/ImGuiAabb.cpp
        Common/ImGuiStorage.cpp
        Common/ImGuiTextBuffer.cpp
        Common/ImBitmapFont.cpp
        Common/ImDrawList.cpp
        Common/ImGuiTextFilter.cpp

        ImGui.cpp
        ImWidget.cpp
        ImUtil.cpp
        ImGuiSample.cpp
        ImGuiInternal.cpp
        ImGuiTextEdit.cpp
        )